# kaggle

./: conda.yaml  pyproject.toml
methods/: deepnet.py
